--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,11 @@
-body{
-    background-color:antiquewhite
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.responsive {
+  width: 100%;
+  height: auto;
 }
 
